Fixed a bunch of compilation deprecation warnings.
We could safely ignore iText deprecations, since we use a fork and nobody can remove deprecated stuff from our onw fork.

The only concern is BouncyCastle deprecations - could be a problem eventually when that dependency updates - if it removes the deprecated code.